2007-11-15  Neil J. Patel  <njp@o-hand.com>

	* clutter/clutter-model.c:
	Added some more examples to the documentation, plus explained how the
	iters work internally.

2007-11-15  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-main.[ch]: added clutter_grab_pointer,
	clutter_ungrab_pointer and clutter_get_pointer_grab, in
	clutter_do_event deliver pointer related events only to the
	actor with the pointer grab if a grab exists.
	* clutter/clutter-private.h: added pointer_grab_actor to context.
	* tests/Makefile.am:
	* tests/test-grab.c: added test for testing the pointer grab.

2007-11-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.[ch]: Add ClutterTimeline:direction
	property, defining the direction (forward or backward) of the
	timeline.

	* tests/test-timeline.c: Test the direction property.

	* clutter.symbols: Update exported symbols

2007-11-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-effect.h:
	* clutter/clutter-effect.c:
	(clutter_effect_template_new_for_duration): Add a simple constructor
	for implicitly creating a ClutterTimeline with a given duration.

2007-11-15  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Update with the new public symbols

	* clutter/clutter-script.h:
	* clutter/clutter-script-private.h:
	* clutter/clutter-script.c:
	(parse_signals), (json_object_end),
	(signal_info_free), (object_info_free): Parse the "signals"
	member for GObjects.

	(clutter_script_connect_signals),
	(clutter_script_connect_signals_full): Add new API for autoconnecting
	signal handlers using the UI definition files.

	* tests/test-script.c:
	* tests/test-script.json: Test signal autoconnection.

2007-11-15  Matthew Allum  <mallum@openedhand.com>

	* clutter/Makefile.am:
	* clutter/eglx/Makefile.am:
	* clutter/eglx/clutter-backend-egl.c:
	* clutter/eglx/clutter-backend-egl.h:
	* clutter/eglx/clutter-eglx.h:
	* clutter/eglx/clutter-event-egl.c:
	* clutter/eglx/clutter-stage-egl.c: